omni/tests/goldens/types/unknown_type_06.err
tests/goldens/types/unknown_type_06.omni:1:12: error: unknown type "Mystery6"
     1 | let value6:Mystery6 = 1
       |            ^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_06.omni:1:1: error: type mismatch: cannot assign int to Mystery6
     1 | let value6:Mystery6 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery6 or change the variable type to int
